# CameraQHYCCD

./: .gitignore  CMakeLists.txt  Controls.txt  README.md
CameraQHYCCD/: CMakeLists.txt  build.txt  guider.cpp  main.cpp  myprofile.txt
CameraQHYCCD/include/: autoexposurehandler.h  camenums.h  cameraqhyccd.h  camframe.h  camstruct.h  focusingFSM.h  framepipeline.h  imageblurmetric.h  imagepipeline.h  imageprocess.h  objectivecontroller.h
CameraQHYCCD/include/CameraSDK_include/: config.h  qhyccd.h  qhyccdstruct.h
CameraQHYCCD/include/opencv2/: opencv_modules.hpp
CameraQHYCCD/lib/: qhyccd.lib
CameraQHYCCD/lib/opencv/: opencv_barcode460.lib  opencv_bgsegm460.lib  opencv_bioinspired460.lib  opencv_calib3d460.lib  opencv_ccalib460.lib  opencv_datasets460.lib  opencv_dnn460.lib  opencv_dnn_objdetect460.lib  opencv_dnn_superres460.lib  opencv_dpm460.lib  opencv_face460.lib  opencv_features2d460.lib  opencv_flann460.lib  opencv_fuzzy460.lib  opencv_gapi460.lib  opencv_hfs460.lib  opencv_img_hash460.lib  opencv_imgcodecs460.lib  opencv_intensity_transform460.lib  opencv_line_descriptor460.lib  opencv_mcc460.lib  opencv_ml460.lib  opencv_objdetect460.lib  opencv_optflow460.lib  opencv_phase_unwrapping460.lib  opencv_photo460.lib  opencv_plot460.lib  opencv_quality460.lib  opencv_rapid460.lib  opencv_reg460.lib  opencv_rgbd460.lib  opencv_saliency460.lib  opencv_shape460.lib  opencv_stereo460.lib  opencv_stitching460.lib  opencv_structured_light460.lib  opencv_superres460.lib  opencv_surface_matching460.lib  opencv_text460.lib  opencv_tracking460.lib  (+7 more)
CameraQHYCCD/lib/opencv-lib/: OpenCVConfig.cmake  OpenCVModules-debug.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake  opencv_rgbd460.lib  opencv_rgbd460d.lib  opencv_wechat_qrcode460.lib  opencv_wechat_qrcode460d.lib  opencv_xfeatures2d460.lib  opencv_xfeatures2d460d.lib  opencv_ximgproc460.lib  opencv_ximgproc460d.lib
CameraQHYCCD/src/: autoexposurehandler.cpp  cameraqhyccd.cpp  camframe.cpp  focusingFSM.cpp  framepipeline.cpp  imageblurmetric.cpp  imagepipeline.cpp  imageprocess.cpp  objectivecontroller.cpp
build-CameraQHYCCD-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-CameraQHYCCD-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-04217bf88f7bed51915c.json  index-2023-01-31T11-44-40-0273.json  target-CameraQHYCCD-Debug-6741645dbc19380589ab.json
build-CameraQHYCCD-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-c9caa2dc0cbc6508e0bc.json  cmakeFiles-v1-d8cd6260a24a70117005.json  codemodel-v2-23df15e466db761f1bc0.json  index-2023-01-30T11-52-47-0789.json
